public/examples/errors/go_file_while_true.go
package main

import "fmt"

func main() {
	for {
		fmt.Println("hello world")
	}
}
